--- a/legacy/style-v7.css
+++ b/legacy/style-v7.css
@@ -129,7 +129,7 @@ footer {
 .nav{
     position: absolute;
     width: 100%;
-    padding: 1rem 0;
+    padding: 3rem 0;
 }
 /* .nav-content-wrapper{ */
     /* position:absolute; */
@@ -160,24 +160,28 @@ footer {
     color:var(--clr-primary-500);
 }
 @media (min-width: 480px) {
-    .nav{
-        padding: 2rem 0;
-        padding: 3rem 0;
-    }
     .nav>.flex-layout{
-        --gap: 2rem;
         position:relative;
         align-items: center;
         justify-content: space-between;
     }
     .nav-icon-wrapper{
-        height: 6vw;
-        width: 6vw;
+        height: 5vw;
+        width: 5vw;
         background-image: url(../images/masthead/astronaut.png);
         background-position: center ;
         background-size: contain;
         background-color: var(--clr-secondary-200);
         clip-path: circle(50%);
+    }
+    .nav-icon{
+        display:inline-block;
+        /* display:inline; */
+        /* width: 35%;
+        height: 35%; */
+        /* max-width: 5rem; */
+        /* clip-path: circle(155%);  */
+        /* background-color: var(--clr-secondary-200); */
     }
 }
 
@@ -490,13 +494,6 @@ footer a:hover{
     display: flex;
     gap: var(--gap, 1rem);
 }
-
-/* @media (min-width: 480px){
-    .disable-desktop{
-        display: none;
-    }
-} */
-
 
 .text-center {
     text-align: center;
