--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 
     /* --fs-xl: clamp(1.5rem, 8vw + 0.5rem , 5rem); */
     /* --fs-xl: clamp(2rem, 10vw + 0.5rem , 6rem); */
-    --fs-xl: calc(1.125 * clamp(2rem, 10vw + 0.5rem , 6rem));
+    --fs-xl: calc(1.125 * clamp(2rem, 10vw + 0.5rem , 5rem));
     /* --fs-800: 1.375rem; */
 
     /* --fs-800: 1.75rem; */
@@ -107,7 +107,9 @@ footer {
 }
 .container {
     margin-inline: auto;
-    width: min(90%, 70.5rem);
+    /* width: min(90%, 70.5rem); */
+    width: min(90%, 60rem);
+    width: min(90%, 55rem);
 }
 .split {
     display: flex;
@@ -161,8 +163,11 @@ footer {
 }
 @media (min-width: 480px) {
     .nav{
-        padding: 2rem 0;
-        padding: 3rem 0;
+        position: fixed;
+        padding: 1.5rem 0;
+        z-index: 100;
+        transition: all ease 800ms;
+        background-color: transparent;
     }
     .nav>.flex-layout{
         --gap: 2rem;
@@ -179,6 +184,25 @@ footer {
         background-color: var(--clr-secondary-200);
         clip-path: circle(50%);
     }
+    .nav-list-wrapper{
+        right: 1rem;
+    }
+    .nav-list-anchor{
+        font-size: var(--fs-600);
+    }
+    .nav--disappear {
+        background-color: transparent;
+        transform: translateY(-200%);
+    }
+    .nav--transparent {
+        background-color: transparent;
+    }
+    .nav--colored {
+        background-color: var(--clr-primary-800);
+    }
+    .nav--translate-up {
+        transform: translateY(-200%);
+    }
 }
 
 
@@ -189,7 +213,7 @@ footer {
     background-size:cover;
     padding-top: 4.5rem;
 }
-.top .split{
+.top-wrapper>.split{
     gap: 1rem;
 }
 .top-orange-planet {
@@ -223,6 +247,14 @@ footer {
     color:var(--clr-secondary-600);
 }
 @media (min-width: 480px){
+    .top{
+        padding-top: 12.5rem;
+        padding-top: 10rem;
+        padding-top: 8rem;
+    }
+    .top-wrapper>.split{
+        height: 25vw;
+    }
     .top-text h3{
         font-size: var(--fs-600);
     }
@@ -240,24 +272,34 @@ footer {
     /* } */
     .top-orange-planet{
         max-width: 6rem;
+        max-width: 5.5rem;
+        padding-top: 4rem;
+        order: 1;
     }
     .top-blue-planet{
         /* order:1; */
         max-width: 12rem;
+        max-width: 11rem;
+        max-width: 10rem;
         /* align-self:calc(start ); */
+        /* order: 1; */
     }
     .top-text{
-        padding-top:7.5rem;
         white-space: nowrap;
-        order:-1;
+        align-self: center;
+        /* order:-1; */
     }
     .top-city{
-        /* top: -1rem; */
-        width: 20vw;
+        /* width: 20vw; */
+        width: 50vw;
+        transform: translateX(-50%);
+        /* top: 1.5vw; */
+        /* top: 1rem; */
+        /* bottom: -1rem; */
         z-index: 10;
     }
 }
-@media ((min-width: 480px) and (max-width: 700px)){
+/* @media ((min-width: 480px) and (max-width: 700px)){
     .top-orange-planet{
         max-width: 3rem;
     }
@@ -267,7 +309,7 @@ footer {
     .top-text{
         padding-top: 2.5rem;
     }
-}
+} */
 
 
 .intro {
@@ -319,14 +361,16 @@ footer {
     }
     .intro-text {
         /* margin-top: 40vw; */
-        margin-top: 45vw;
+        /* margin-top: 45vw; */
+        /* after redone top and nav */
+        margin-top: 25vw;
     }
 }
-@media ((min-width: 480px) and (max-width: 700px)){
+/* @media ((min-width: 480px) and (max-width: 700px)){
     .intro-text{
         margin-top: 35vw;
     }
-}
+} */
 
 .i-can-help .split{
     gap: 2rem;
@@ -491,11 +535,11 @@ footer a:hover{
     gap: var(--gap, 1rem);
 }
 
-/* @media (min-width: 480px){
+@media (min-width: 480px){
     .disable-desktop{
         display: none;
     }
-} */
+}
 
 
 .text-center {
@@ -507,6 +551,9 @@ footer a:hover{
 
 .overflow-x--hidden{
     overflow-x: hidden;
+}
+.overflow-y--hidden{
+    overflow-y: hidden;
 }
 
 
